# stepper-driver

./: CMakeLists.txt
Inc/: s_curve.h  step_motor.h
Src/: step_motor.c
src/: s_curve.c
